Fixed uneven width on rowSelection and rowAction columns

--- a/stencil-workspace/src/components/modus-table/modus-table.scss
+++ b/stencil-workspace/src/components/modus-table/modus-table.scss
@@ -31,6 +31,7 @@ table {
   font-size: $rem-14px;
   height: fit-content;
   width: 100%;
+  table-layout: fixed;
 
   &.cell-borderless {
     th,
